dependencies/charon/charon/tests/ui/simple/match-on-char.rs
//@ known-failure
fn main() {
    match 'x' {
        'a' => {}
        _ => {}
    }
}
